page deal passport & fixes

--- a/app/blocks/breadcrumbs-form/breadcrumbs-form.scss
+++ b/app/blocks/breadcrumbs-form/breadcrumbs-form.scss
@@ -38,17 +38,21 @@
   &__step {
     @include text;
 
-    line-height: (26/14);
+    line-height: (26 / 14);
     font-weight: 400;
 
     @include screen('sm') {
       @include text10;
 
-      line-height: (13/10);
+      line-height: (13 / 10);
     }
 
     b {
       font-weight: 700;
+    }
+
+    &_light {
+      color: $color-bc-light;
     }
   }
 }
