--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -59,13 +59,13 @@
     @include text16;
 
     display: inline-block;
-    line-height: (20/16);
+    line-height: (20 / 16);
     width: 100%;
 
     @include screen('sm') {
       @include text;
 
-      line-height: (20/14);
+      line-height: (20 / 14);
     }
   }
 
@@ -74,7 +74,6 @@
     color: $color-white;
 
     #{$b} {
-
       &__angle {
         top: auto;
         bottom: -6px;
@@ -85,5 +84,9 @@
 
   &_bold {
     font-weight: 700;
+  }
+
+  &_notification {
+    padding: 0;
   }
 }
