--- a/app/blocks/sidebar/sidebar.scss
+++ b/app/blocks/sidebar/sidebar.scss
@@ -10,6 +10,11 @@
     color: $color-white;
   }
 
+  &_dark2 {
+    background-color: $color-hint-bg;
+    color: $color-white;
+  }
+
   &_no-bg {
     background-color: transparent;
   }
