--- a/app/blocks/space/space.pug
+++ b/app/blocks/space/space.pug
@@ -72,6 +72,8 @@ mixin space-reserv(tag, data)
       +e.title!= data.title
       if data.location
         +e.location!= data.location
+      if data.text
+        +e.text!= data.text
     block
 
 mixin space-reserv-gallery(tag, data)
