--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -76,6 +76,10 @@
           padding-left: 25px;
         }
 
+        &_pr0 {
+          padding-right: 0;
+        }
+
         &_sub {
           width: 47%;
         }
@@ -116,5 +120,13 @@
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
+    padding-left: 13px;
+    box-sizing: border-box;
+  }
+
+  &__state {
+    &:not(:last-child) {
+      margin-right: 27px;
+    }
   }
 }
