--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -62,6 +62,7 @@ include ../blocks/message/message
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/note/note
+include ../blocks/notification/notification
 include ../blocks/offer-counters/offer-counters
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
@@ -102,6 +103,7 @@ include ../blocks/space-reservation/space-reservation
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
 include ../blocks/state/state
+include ../blocks/status-button/status-button
 include ../blocks/status/status
 include ../blocks/sticky-message/sticky-message
 include ../blocks/switch/switch
@@ -110,6 +112,7 @@ include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
 include ../blocks/time/time
+include ../blocks/timer/timer
 include ../blocks/tip/tip
 include ../blocks/toggle/toggle
 include ../blocks/transport-table/transport-table
