--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -40,7 +40,7 @@ block content
         +link(href="edit-space-location.html") SpacePool -Edit Space page - location (edit-space-location.html)
         +link(href="search-result.html") SpacePool - Search result (search-result.html)
         +link(href="reservations.html") SpacePool - My reservations (reservations.html)
-        //- +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
+        +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
 
       +page-title._small Попапы
       +e.list
