--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -136,6 +136,8 @@ $color-range-handler-active: #434b57;
 $color-hide-button-border: #e1e8ea;
 $color-button-radio-border: #c5c9ca;
 $color-disabled-tabs: #d6dce2;
+$color-gray-light-2: #e6eaf0;
+$color-border-gray: #444c59;
 
 // ##########
 // Transitions
