--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -2,13 +2,13 @@
 
 @mixin heading-1 {
   font-size: 56px;
-  line-height: (57/56);
+  line-height: (57 / 56);
   letter-spacing: -.02em;
 }
 
 @mixin heading-1-lg {
   font-size: 50px;
-  line-height: (48/50);
+  line-height: (48 / 50);
   letter-spacing: -.02em;
 }
 
@@ -26,13 +26,13 @@
 
 @mixin heading-3 {
   font-size: 25px;
-  line-height: (33/25);
+  line-height: (33 / 25);
   letter-spacing: -.02em;
 }
 
 @mixin heading-4 {
   font-size: 20px;
-  line-height: (26/20);
+  line-height: (26 / 20);
   letter-spacing: -.02em;
 }
 
@@ -48,6 +48,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text35 {
+  font-size: 35px;
+  line-height: 1;
+  letter-spacing: -.02em;
+}
+
 @mixin text28 {
   font-size: 28px;
   line-height: 1;
@@ -56,49 +62,49 @@
 
 @mixin text22 {
   font-size: 22px;
-  line-height: (26/22);
+  line-height: (26 / 22);
   letter-spacing: -.02em;
 }
 
 @mixin text-big {
   font-size: 18px;
-  line-height: (26/18);
+  line-height: (26 / 18);
   letter-spacing: -.02em;
 }
 
 @mixin text-mid {
   font-size: 17px;
-  line-height: (26/17);
+  line-height: (26 / 17);
   letter-spacing: -.02em;
 }
 
 @mixin text16 {
   font-size: 16px;
-  line-height: (26/16);
+  line-height: (26 / 16);
   letter-spacing: -.02em;
 }
 
 @mixin text15 {
   font-size: 15px;
-  line-height: (26/15);
+  line-height: (26 / 15);
   letter-spacing: -.02em;
 }
 
 @mixin text {
   font-size: 14px;
-  line-height: (20/16);
+  line-height: (20 / 16);
   letter-spacing: -.02em;
 }
 
 @mixin text13 {
   font-size: 13px;
-  line-height: (26/13);
+  line-height: (26 / 13);
   letter-spacing: -.02em;
 }
 
 @mixin text12 {
   font-size: 12px;
-  line-height: (26/12);
+  line-height: (26 / 12);
   letter-spacing: -.02em;
 }
 
@@ -110,13 +116,13 @@
 
 @mixin text10 {
   font-size: 10px;
-  line-height: (26/10);
+  line-height: (26 / 10);
   letter-spacing: -.02em;
 }
 
 @mixin text9 {
   font-size: 9px;
-  line-height: (26/9);
+  line-height: (26 / 9);
   letter-spacing: -.02em;
 }
 
