--- a/app/blocks/popups/popups.pug
+++ b/app/blocks/popups/popups.pug
@@ -7,6 +7,10 @@ mixin popup()
     div.popup__content
       block
 
+mixin popup-free()
+  +b.popup&attributes(attributes)
+    block
+
 mixin popup-heading()
   div.popup__heading&attributes(attributes)
     block
