--- a/app/blocks/scrollbar/scrollbar-wide.scss
+++ b/app/blocks/scrollbar/scrollbar-wide.scss
@@ -1,36 +1,36 @@
 @import '../../node_modules/overlayscrollbars/css/OverlayScrollbars.css';
 
 //your theme name
-$theme-name: os-theme-custom;
+$theme-name: os-theme-custom-wide;
 
 //horizontal scrollbar
-$scrollbar-horizontal-size: 2px; //horizontal scrollbar height
-$scrollbar-horizontal-padding: 3px;
-$scrollbar-horizontal-inner-expansion: 3px;
-$scrollbar-horizontal-track-background: $color-bg;
-$scrollbar-horizontal-track-background-hover: $color-bg;
-$scrollbar-horizontal-track-background-active: $color-bg;
+$scrollbar-horizontal-size: 4px; //horizontal scrollbar height
+$scrollbar-horizontal-padding: 5px;
+$scrollbar-horizontal-inner-expansion: 5px;
+$scrollbar-horizontal-track-background: $color-scrollbar-bg;
+$scrollbar-horizontal-track-background-hover: $color-scrollbar-bg;
+$scrollbar-horizontal-track-background-active: $color-scrollbar-bg;
 $scrollbar-horizontal-track-transition: background-color .3s;
 $scrollbar-horizontal-handle-min-size: 25px; //horizontal scrollbar handle min width
 $scrollbar-horizontal-handle-max-size: none; //horizontal scrollbar handle max width
-$scrollbar-horizontal-handle-background: rgba($color-text-light, 1);
-$scrollbar-horizontal-handle-background-hover: rgba($color-text-light, .6);
-$scrollbar-horizontal-handle-background-active: rgba($color-text-light, 1);
+$scrollbar-horizontal-handle-background: rgba($color-border-light, 1);
+$scrollbar-horizontal-handle-background-hover: rgba($color-border-light, .6);
+$scrollbar-horizontal-handle-background-active: rgba($color-border-light, 1);
 $scrollbar-horizontal-handle-transition: background-color .3s;
 
 //vertical scrollbar
-$scrollbar-vertical-size: 2px; //vertical scrollbar width
-$scrollbar-vertical-padding: 3px;
-$scrollbar-vertical-inner-expansion: 3px;
-$scrollbar-vertical-track-background: $color-bg;
-$scrollbar-vertical-track-background-hover: $color-bg;
-$scrollbar-vertical-track-background-active: $color-bg;
+$scrollbar-vertical-size: 4px; //vertical scrollbar width
+$scrollbar-vertical-padding: 5px;
+$scrollbar-vertical-inner-expansion: 5px;
+$scrollbar-vertical-track-background: $color-scrollbar-bg;
+$scrollbar-vertical-track-background-hover: $color-scrollbar-bg;
+$scrollbar-vertical-track-background-active: $color-scrollbar-bg;
 $scrollbar-vertical-track-transition: background-color .3s;
 $scrollbar-vertical-handle-min-size: 25px; //vertical scrollbar handle min height
 $scrollbar-vertical-handle-max-size: none; //vertical scrollbar handle max height
-$scrollbar-vertical-handle-background: rgba($color-text-light, 1);
-$scrollbar-vertical-handle-background-hover: rgba($color-text-light, .6);
-$scrollbar-vertical-handle-background-active: rgba($color-text-light, 1);
+$scrollbar-vertical-handle-background: rgba($color-border-light, 1);
+$scrollbar-vertical-handle-background-hover: rgba($color-border-light, .6);
+$scrollbar-vertical-handle-background-active: rgba($color-border-light, 1);
 $scrollbar-vertical-handle-transition: background-color .3s;
 
 //scrollbar corner
@@ -166,4 +166,3 @@ $scrollbar-corner-background-color: transparent;
 @import 'scrollbar-light.scss';
 @import 'scrollbar-thin.scss';
 @import 'scrollbar-light-gray.scss';
-@import 'scrollbar-wide.scss';
