--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -322,6 +322,8 @@
     line-height: (26/ 14);
     font-weight: 400;
     color: $color-basic-light;
+    width: 100%;
+    display: block;
   }
 
   &__informer {
