--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -51,6 +51,7 @@ block content
         +link(href="#popup-subscribe-host").js-popup Popup subscribe for host
         +link(href="#popup-cancel-request").js-popup Popup cancel request
         +link(href="#popup-password-change").js-popup Popup password change
+        +link(href="#popup-legal-formalities").js-popup Popup legal formalities
 
 block panels
   +main-menu
@@ -62,3 +63,5 @@ block popups
   +popup-subscribe-host#popup-subscribe-host
   +popup-cancel-request#popup-cancel-request
   +popup-password-change#popup-password-change
+  +popup-document(getData('legal-formalities.json'))#popup-legal-formalities
+    +document-legal
