--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -773,6 +773,10 @@ block content
             +ui-description .js-scrollbar-light-gray
             +e.scrolldemo.js-scrollbar-light-gray
               +e.scrolldemo-block
+          +col(2)
+            +ui-description .js-scrollbar-wide
+            +e.scrolldemo.js-scrollbar-wide
+              +e.scrolldemo-block
 
     //- Слайдер
     - var spaces = getData('spaces.json')
