--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -125,8 +125,8 @@
   }
 
   &__state {
-    &:not(:last-child) {
-      margin-right: 27px;
+    &:not(:first-child) {
+      margin-left: 27px;
     }
   }
 }
