--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -76,6 +76,7 @@ include ../blocks/page-title/page-title
 include ../blocks/page/page
 include ../blocks/pagination/pagination
 include ../blocks/panel/panel
+include ../blocks/party/party
 include ../blocks/payment-card/payment-card
 include ../blocks/photo-preview/photo-preview
 include ../blocks/places/places
@@ -93,6 +94,7 @@ include ../blocks/section/section
 include ../blocks/selectable-block/selectable-block
 include ../blocks/short-profile/short-profile
 include ../blocks/sidebar/sidebar
+include ../blocks/sign-input/sign-input
 include ../blocks/slider/slider
 include ../blocks/slogan/slogan
 include ../blocks/social-button/social-button
@@ -127,6 +129,7 @@ include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
 include ../components/content/content
 include ../components/conversation/conversation
+include ../components/document/document
 include ../components/facilities/facilities
 include ../components/filter/filter
 include ../components/footer/footer
@@ -141,6 +144,7 @@ include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-cancel-request/popup-cancel-request
+include ../components/popup-document/popup-document
 include ../components/popup-password-change/popup-password-change
 include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
