--- a/app/styles/helpers/_list-styles.scss
+++ b/app/styles/helpers/_list-styles.scss
@@ -1,7 +1,5 @@
 @mixin list {
-
-  ul,
-  ol {
+  ul,ol {
     padding-top: 5px;
     padding-bottom: 5px;
   }
@@ -21,7 +19,6 @@
 }
 
 @mixin ullist {
-
   li::before {
     @include pseudo;
 
@@ -42,13 +39,33 @@
   counter-reset: list1;
 
   li {
+    padding-left: 0;
 
     &::before {
-      position: absolute;
-      left: 0;
-      top: 0;
       counter-increment: list1;
-      content: counter(list1) '.';
+      content: counter(list1)'. ';
+    }
+  }
+
+  ol {
+    counter-reset: list2;
+
+    li {
+      &::before {
+        counter-increment: list2;
+        content: counter(list1)'.'counter(list2)'. ';
+      }
+    }
+
+    ol {
+      counter-reset: list3;
+
+      li {
+        &::before {
+          counter-increment: list3;
+          content: counter(list1)'.'counter(list2)'.'counter(list3)'. ';
+        }
+      }
     }
   }
 }
