--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -138,6 +138,7 @@ $color-button-radio-border: #c5c9ca;
 $color-disabled-tabs: #d6dce2;
 $color-gray-light-2: #e6eaf0;
 $color-border-gray: #444c59;
+$color-scrollbar-bg: #f4f4f4;
 
 // ##########
 // Transitions
