--- a/app/blocks/party/party.pug
+++ b/app/blocks/party/party.pug
@@ -1,3 +1,8 @@
-mixin party()
+mixin party(data)
   +b.party&attributes(attributes)
-    block
+    +e.top
+      +e.name!= data.name
+      +e.sign
+        +sign-input(data.label)
+    +e.bottom
+      block
