--- a/app/components/document/document.scss
+++ b/app/components/document/document.scss
@@ -11,6 +11,12 @@
     &:not(:last-child) {
       margin-bottom: 92px;
     }
+
+    &_mb98 {
+      &:not(:last-child) {
+        margin-bottom: 98px;
+      }
+    }
   }
 
   &__heading {
@@ -94,6 +100,27 @@
       font-weight: 400;
       display: inline-block;
       color: $color-basic-light;
+    }
+  }
+
+  &__subsection {
+    display: block;
+    width: 100%;
+
+    &:not(:last-child) {
+      margin-bottom: 39px;
+    }
+  }
+
+  &__subtitle {
+    @include text-mid;
+
+    display: block;
+    width: 100%;
+    font-weight: 700;
+
+    &:not(:last-child) {
+      margin-bottom: 15px;
     }
   }
 }
