--- a/app/components/popup-document/popup-document.scss
+++ b/app/components/popup-document/popup-document.scss
@@ -6,6 +6,9 @@
 
   &__content {
     display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    max-width: 100%;
   }
 
   &__column {
@@ -14,7 +17,7 @@
 
     &_left {
       position: relative;
-      flex: 1;
+      width: calc(72.7% - 50px);
 
       &:not(:last-child) {
         margin-right: 50px;
@@ -24,6 +27,7 @@
     &_right {
       margin-top: 4px;
       width: 27.3%;
+      min-width: 27.3%;
     }
   }
 
