--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -10,8 +10,8 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
   display: block; // fallback для старых браузеров
   display: flex;
   flex-wrap: wrap;
-  margin-left: -$grid-gap/2;
-  margin-right: -$grid-gap/2;
+  margin-left: -$grid-gap / 2;
+  margin-right: -$grid-gap / 2;
   margin-top: -$grid-gap-vertical;
 
   &_ac {
@@ -51,8 +51,8 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
   }
 
   &_big {
-    margin-left: -$grid-gap-big/2;
-    margin-right: -$grid-gap-big/2;
+    margin-left: -$grid-gap-big / 2;
+    margin-right: -$grid-gap-big / 2;
     margin-top: -$grid-gap-vertical-big;
   }
 
@@ -65,6 +65,12 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       margin-left: -5px;
       margin-right: -5px;
     }
+  }
+
+  &_gap72 {
+    margin-left: -36px;
+    margin-right: -36px;
+    margin-top: -$grid-gap-vertical-big;
   }
 
   &_30x40 {
@@ -141,7 +147,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
   &__col {
     display: inline-block; // fallback для старых браузеров
     box-sizing: border-box;
-    padding: $grid-gap-vertical $grid-gap/2 0;
+    padding: $grid-gap-vertical $grid-gap / 2 0;
     margin: 0;
 
     @include text;
@@ -152,8 +158,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       }
     }
 
-    @each $key,
-    $val in $new-breakpoints {
+    @each $key, $val in $new-breakpoints {
       @for $i from 1 through 15 {
         @include screen($key) {
           &_#{$key}_#{$i} {
@@ -216,7 +221,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
 
     #{$b}_big & {
-      padding: $grid-gap-vertical-big $grid-gap-big/2 0;
+      padding: $grid-gap-vertical-big $grid-gap-big / 2 0;
     }
 
     #{$b}_bigger & {
@@ -225,6 +230,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       @include screen('sm') {
         padding: $grid-gap-vertical-big 5px 0;
       }
+    }
+
+    #{$b}_gap72 & {
+      padding: $grid-gap-vertical-big 36px 0;
     }
 
     #{$b}_30x40 & {
