--- a/app/blocks/party/party.scss
+++ b/app/blocks/party/party.scss
@@ -1,3 +1,46 @@
 .party {
   $b: &;
+
+  display: block;
+  width: 100%;
+
+  &__top {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    transition: opacity $ease-main;
+    margin-bottom: 7px;
+
+    #{$b}.is-disabled & {
+      pointer-events: none;
+      opacity: .5;
+    }
+  }
+
+  &__name {
+    @include text-mid;
+
+    font-weight: 700;
+    color: $color-basic;
+    flex: 1;
+
+    &:not(:last-child) {
+      margin-right: 5px;
+    }
+  }
+
+  &__sign {
+    min-width: 200px;
+    width: 200px;
+  }
+
+  &__text {
+    @include text16;
+
+    display: block;
+    width: 100%;
+    font-weight: 400;
+    color: $color-basic;
+  }
 }
