--- a/app/blocks/sign-input/sign-input.scss
+++ b/app/blocks/sign-input/sign-input.scss
@@ -1,3 +1,72 @@
 .sign-input {
   $b: &;
+
+  position: relative;
+  display: block;
+  width: 100%;
+  background-color: $color-yellow-light;
+
+  &::after {
+    @include pseudo;
+
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    box-sizing: border-box;
+    border-bottom: 1px solid $color-basic;
+  }
+
+  &__label {
+    @include text15;
+
+    line-height: (26 / 15);
+    font-weight: 400;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 32px;
+    z-index: 2;
+    pointer-events: none;
+    color: $color-basic;
+    transition: opacity $ease-main;
+    overflow: hidden;
+  }
+
+  &__star {
+    @include heading-3;
+
+    display: inline-block;
+    line-height: (26 / 25);
+    font-weight: 400;
+    color: $color-red-2;
+  }
+
+  &__text {
+    overflow: hidden;
+    display: inline-block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 25px);
+  }
+
+  &__input {
+    width: 100%;
+    padding: 0;
+    height: 32px;
+    border-bottom-color: transparent;
+
+    &:hover,&:focus {
+      border-bottom-color: transparent;
+    }
+
+    &:focus ~ #{$b}__label {
+      opacity: 0;
+    }
+  }
 }
