--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -22,6 +22,7 @@ include ../blocks/characteristics-table/characteristics-table
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
 include ../blocks/conversation-info/conversation-info
+include ../blocks/detail/detail
 include ../blocks/dialog/dialog
 include ../blocks/divider/divider
 include ../blocks/dots/dots
@@ -95,6 +96,7 @@ include ../blocks/selectable-block/selectable-block
 include ../blocks/short-profile/short-profile
 include ../blocks/sidebar/sidebar
 include ../blocks/sign-input/sign-input
+include ../blocks/signatures/signatures
 include ../blocks/slider/slider
 include ../blocks/slogan/slogan
 include ../blocks/social-button/social-button
@@ -108,6 +110,7 @@ include ../blocks/state/state
 include ../blocks/status-button/status-button
 include ../blocks/status/status
 include ../blocks/sticky-message/sticky-message
+include ../blocks/summary-table/summary-table
 include ../blocks/switch/switch
 include ../blocks/table-head/table-head
 include ../blocks/table/table
