--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -37,6 +37,7 @@ $color-gradient-one: #0caecc;
 $color-gradient-two: #30e3c9;
 $color-yellow: #ff9600;
 $color-red: #eb4433;
+$color-red-2: #e63a18;
 $color-blue: #1dd5f0;
 $color-green: #29f785;
 $color-white: #fff;
@@ -139,6 +140,7 @@ $color-disabled-tabs: #d6dce2;
 $color-gray-light-2: #e6eaf0;
 $color-border-gray: #444c59;
 $color-scrollbar-bg: #f4f4f4;
+$color-yellow-light: #fff7c8;
 
 // ##########
 // Transitions
